--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,10 +1,10 @@
 <h2 id="title">Welcome to Ember.js</h2>
 {{#if session.isAuthenticated}}
   <div>
-    <img src='{{session.avatar}}' />
+    <img src='{{session.currentUser.avatar}}' />
   </div>
   <div>
-    {{session.username}}
+    {{session.currentUser.username}}
   </div>
   <div>
     <button {{action 'signout'}}>Logout</button>
