--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -128,5 +128,36 @@ body {
 .topic-card {
   display: inline-block;
 }
+.icon-btn {
+  background: none;
+  border: 0;
+  color: #ccc;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  width: auto;
+
+  &:hover {
+    color: #000;
+  }
+
+  i {
+    font-size: 37px;
+  }
+}
+.link-btn {
+  background: none;
+  border: 0;
+  font-size: 1em;
+  font-weight: bold;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  width: auto;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
 @import "pod-styles";
