--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,7 @@ html {
 /* styles */
 body {
   font-family: 'Maven Pro', sans-serif;
+  font-size: 1em;
   padding: 0;
   margin: 0;
 }
@@ -148,7 +149,7 @@ body {
 .link-btn {
   background: none;
   border: 0;
-  font-size: 1em;
+  font-size: inherit;
   font-weight: bold;
   height: auto;
   margin: 0;
