--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -19,7 +19,7 @@
   {{#each orderedTopics as |topic index|}}
     <li>
       <div class='number'>{{base-one-index index}}</div>
-      {{topic-card classNames='topic-card' topic=topic}}
+      {{topic-card classNames='topic-card' topic=topic topicUpdated='updateTopic'}}
     </li>
   {{/each}}
 </ol>
