Remove unnecessary function

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -10,9 +10,7 @@
         class='new-topic-input'
         type='text'
         value=newTopic
-        placeholder='Suggest a Topic'
-        key-press='newTopicUpdated'
-        value=target.value }}
+        placeholder='Suggest a Topic' }}
     </div>
   </form>
 {{/if}}
